# mfa_manager

./: CLAUDE.md  Cargo.toml  PRODUCT_DESIGN.md  README.md  agents.py  colors.html  index.html  index_mobile.html  rustup-init
docs/: BUILD.md  IMPLEMENTATION.md  PRD.md  UI_DESIGN.md  ui_mockup.html
slint_ui/: Cargo.toml
slint_ui/src/: main.rs
slint_ui/ui/: app.slint
vaultx-core/: Cargo.toml
vaultx-core/src/: crypto.rs  entry.rs  generator.rs  lib.rs  totp.rs  vault.rs
vaultx-ui/: Cargo.toml
vaultx-ui/src/: app.rs  icons.rs  main.rs  theme.rs
vaultx-ui/src/screens/: detail.rs  generator.rs  list.rs  mod.rs  new_entry.rs  settings.rs  totp_view.rs  unlock.rs
vaultx-ui/src/widgets/: buttons.rs  mod.rs  sidebar.rs
