[package]
name = "vaultx-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# TOTP
totp-rs = { version = "5", features = ["gen_secret", "serde_support"] }
